build: Adds private sources to EXTRA_DIST target

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -242,6 +242,5 @@ maintainer-clean-local:
 	rm -rf tmp-introspect*
 
 EXTRA_DIST += \
-	js/evdWebTransport.js \
-	js/evdDBusBridge.js \
-	js/evdJsonrpc.js
+	$(source_h_priv) \
+	$(jslib_DATA)
