Adds implementation of Deferred/Promise pattern, EvdDeferred and EvdPromise

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -99,7 +99,8 @@ source_c = \
 	evd-daemon.c \
 	evd-http-chunked-decoder.c \
 	evd-jsonrpc-http-client.c \
-	evd-jsonrpc-http-server.c
+	evd-jsonrpc-http-server.c \
+	evd-promise.c
 
 source_h = \
 	evd.h \
@@ -145,7 +146,8 @@ source_h = \
 	evd-daemon.h \
 	evd-jsonrpc-http-client.h \
 	evd-jsonrpc-http-server.h \
-	evd-tls-common.h
+	evd-tls-common.h \
+	evd-promise.h
 
 source_h_priv = \
 	evd-poll.h \
